fix js and css in .htaccess, added log controller

--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,6 @@
 <IfModule mod_rewrite.c>
     RewriteBase /
     RewriteEngine on
-    RewriteCond $1 !^(index\.php|images|robots\.txt)
+    RewriteCond $1 !^(index\.php|js|css|images|robots\.txt)
     RewriteRule ^(.*)$ /index.php/$1 [L]
 </IfModule>
