--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     }
   ],
   "require": {
-    "php": "~5.5.9"
+    "php": "~5.5.9",
+    "ext-soap": "*"
   },
   "require-dev": {
     "heroku/heroku-buildpack-php": "*"
